k8s/int/externaldns-custom.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.opensource.zalan.do/teapot/external-dns:latest
        args:
        - --source=ingress
        - --provider=aws
        - --domain-filter=int.us-east-1.dev.gen6bk.com
        - --aws-zone-type=private
        - --registry=txt
        - --annotation-filter=kubernetes.io/ingress.class=nginx-internal
        - --txt-owner-id=int.us-east-1.dev.gen6bk.com
      securityContext:
        fsGroup: 65534 # For ExternalDNS to be able to read Kubernetes and AWS token files
---
