k8s/int/sonatype-nexus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sonatype-nexus
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonatype-nexus
    chart: sonatype-nexus-2.3.0
    fullname: platform-sonatype-nexus
    heritage: Helm
    release: platform
  name: platform-sonatype-nexus
  namespace: sonatype-nexus
spec:
  ports:
  - name: platform-sonatype-nexus
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sonatype-nexus
    release: platform
  type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: sonatype-nexus
    chart: sonatype-nexus-2.3.0
    fullname: platform-sonatype-nexus
    heritage: Helm
    release: platform
  name: platform-sonatype-nexus
  namespace: sonatype-nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonatype-nexus
      release: platform
  serviceName: platform-sonatype-nexus
  template:
    metadata:
      labels:
        app: sonatype-nexus
        release: platform
    spec:
      containers:
      - env:
        - name: install4jAddVmParams
          value: -Xms1200M -Xmx1200M -XX:MaxDirectMemorySize=2G -XX:+UnlockExperimentalVMOptions
            -XX:+UseCGroupMemoryLimitForHeap
        - name: NEXUS_SECURITY_RANDOMPASSWORD
          value: "false"
        image: 140554600707.dkr.ecr.eu-west-2.amazonaws.com/platform/sonatype-nexus:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 6
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 30
        name: nexus
        ports:
        - containerPort: 5003
          name: nexus-docker-g
        - containerPort: 8081
          name: nexus-http
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 30
        resources:
          requests:
            cpu: 250m
            memory: 4800Mi
        volumeMounts:
        - mountPath: /nexus-data
          name: platform-sonatype-nexus-data
        - mountPath: /nexus-data/backup
          name: platform-sonatype-nexus-backup
      - env:
        - name: ALLOWED_USER_AGENTS_ON_ROOT_REGEX
          value: GoogleHC
        - name: CLOUD_IAM_AUTH_ENABLED
          value: "false"
        - name: BIND_PORT
          value: "8080"
        - name: ENFORCE_HTTPS
          value: "false"
        - name: NEXUS_DOCKER_HOST
          value: null
        - name: NEXUS_HTTP_HOST
          value: null
        - name: UPSTREAM_DOCKER_PORT
          value: "5003"
        - name: UPSTREAM_HTTP_PORT
          value: "8081"
        - name: UPSTREAM_HOST
          value: localhost
        image: quay.io/travelaudience/docker-nexus-proxy:2.6.0
        imagePullPolicy: IfNotPresent
        name: nexus-proxy
        ports:
        - containerPort: 8080
          name: nexus-proxy
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
      securityContext:
        fsGroup: 200
      serviceAccountName: platform-sonatype-nexus
      volumes: null
  volumeClaimTemplates:
  - metadata:
      labels:
        app: sonatype-nexus
        chart: sonatype-nexus-2.3.0
        fullname: platform-sonatype-nexus
        heritage: Helm
        release: platform
      name: platform-sonatype-nexus-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 32Gi
      storageClassName: stable
  - metadata:
      labels:
        app: sonatype-nexus
        chart: sonatype-nexus-2.3.0
        fullname: platform-sonatype-nexus
        heritage: Helm
        release: platform
      name: platform-sonatype-nexus-backup
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 512Gi
      storageClassName: stable
