k8s/int/auth-custom.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx-internal
  labels:
    app: oauth2-proxy
    chart: oauth2-proxy-2.2.1
    heritage: Helm
    release: o2p
  name: o2p-oauth2-proxy
  namespace: auth
spec:
  rules:
  - host: auth.int.us-east-1.dev.gen6bk.com
    http:
      paths:
      - backend:
          serviceName: o2p-oauth2-proxy
          servicePort: 80
        path: /
  tls:
  - hosts:
    - auth.int.us-east-1.dev.gen6bk.com
    secretName: auth-tls
