k8s/int/dex-sensitive.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-internal
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  labels:
    app: platform-dex
    chart: dex-1.2.0
    env: prod
    heritage: Helm
    release: platform
  name: platform-dex-rbac
  namespace: dex-rbac
spec:
  rules:
  - host: dex.int.us-east-1.dev.gen6bk.com
    http:
      paths:
      - backend:
          serviceName: platform-dex
          servicePort: 5556
        path: /
  tls:
  - hosts:
    - dex.int.us-east-1.dev.gen6bk.com
    secretName: cert-auth-dex
