k8s/int/jaeger-sensitive.yaml
---
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: jaeger-ui
  namespace: jaeger
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx-internal
    nginx.ingress.kubernetes.io/auth-url: "https://auth.int.us-east-1.dev.gen6bk.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.int.us-east-1.dev.gen6bk.com/oauth2/start?rd=https%3A%2F%2F$host$request_uri"
spec:
  tls:
  - hosts:
    - jaeger.int.us-east-1.dev.gen6bk.com
    secretName: jaeger-tls
  rules:
  - host: jaeger.int.us-east-1.dev.gen6bk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: stream-query
          servicePort: 16686
