k8s/int/kafka-bridge.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx-internal
    nginx.ingress.kubernetes.io/auth-signin: https://auth.int.us-east-1.dev.gen6bk.com/oauth2/start?rd=https%3A%2F%2F$host$request_uri
    nginx.ingress.kubernetes.io/auth-url: https://auth.int.us-east-1.dev.gen6bk.com/oauth2/auth
  name: bridge
  namespace: kafka
spec:
  rules:
  - host: bridge.int.us-east-1.dev.gen6bk.com
    http:
      paths:
      - backend:
          serviceName: bridge-bridge-service
          servicePort: 8080
  tls:
  - hosts:
    - bridge.int.us-east-1.dev.gen6bk.com
    secretName: bridge-tls
