k8s/int/tekton-custom.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: nginx-internal
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    cert-manager.io/acme-challenge-type: dns01
    nginx.ingress.kubernetes.io/auth-signin: https://auth.int.us-east-1.dev.gen6bk.com/oauth2/start?rd=https%3A%2F%2F$host$request_uri
    nginx.ingress.kubernetes.io/auth-url: https://auth.int.us-east-1.dev.gen6bk.com/oauth2/auth
spec:
  tls:
  - secretName: tekton-dashboard-tls
    hosts:
    - tekton.int.us-east-1.dev.gen6bk.com
  rules:
  - host: tekton.int.us-east-1.dev.gen6bk.com
    http:
      paths:
      - backend:
          serviceName: tekton-dashboard
          servicePort: 9097
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: infra-cd
  namespace: tekton-pipelines
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx-external
spec:
  tls:
  - hosts:
    - infra-cd.int.us-east-1.dev.gen6bk.com
    secretName: infra-cd-tls
  rules:
  - host: infra-cd.int.us-east-1.dev.gen6bk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: el-infra-cd
          servicePort: 8080
